# resilio-sync-tray

./: .flake8  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
resilio_sync_tray/: __main__.py  app.py
scripts/: build.sh
