[tool.poetry]
name = "resilio-sync-tray"
version = "0.1.0"
description = ""
authors = ["Kamil Marut <kamil.marut@finmatics.com>"]
readme = "README.md"
packages = [{include = "resilio_sync_tray"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyqt6 = "^6.5.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
pyinstaller = "^5.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
